fix topnav not disappearing on small devices

--- a/styles/troop370-topnav.css
+++ b/styles/troop370-topnav.css
@@ -185,7 +185,7 @@ topnav li.dropdown {
   .button-collapse, .ham-menu-expand-icon {
     display: inline-block;
   }
-  topnav ul {
+  topnav {
     display: none;
   }
   #titlebar1 {
